src/test/deca/context/valid/intermediaire2/arithmetiques/05moinsUnaire.deca
// Description:
//    Test syntaxe de moins unaire
//
// Resultats:
//    05moinsUnaire.deca
//
// Historique:
//    cree le 09/06/2022


{
    int x = 5;
    int y = ------------------------------5;
}